[gd_scene load_steps=2 format=3 uid="uid://d375w1ofpu6hp"]

[ext_resource type="Script" path="res://scenes/Player/level_up_menu.gd" id="1_2u5oq"]

[node name="LevelUp_Menu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u5oq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
color = Color(1, 1, 1, 0.219608)

[node name="DamageButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 450.0
offset_right = 365.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 25
text = "Add Damage: 0
"

[node name="AttackSpeedButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 432.0
offset_top = 450.0
offset_right = 732.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 25
text = "Add Attack Speed: 0"

[node name="ProjectileSpeedButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 809.0
offset_top = 450.0
offset_right = 1109.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 25
text = "Add Projectile Speed: 0"

[node name="HealthButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1213.0
offset_top = 450.0
offset_right = 1513.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 25
text = "Add Health: 0"

[node name="AttackNumberButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1597.0
offset_top = 450.0
offset_right = 1897.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 25
text = "Add Attack Number: 0"

[node name="SpeedButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 814.0
offset_top = 653.0
offset_right = 1114.0
offset_bottom = 803.0
theme_override_font_sizes/font_size = 25
text = "Add Projectile Speed: 0"

[node name="Cancel" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 863.0
offset_top = 917.0
offset_right = 1081.0
offset_bottom = 1028.0
theme_override_font_sizes/font_size = 25
text = "Close
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -250.0
offset_top = -541.0
offset_right = 250.0
offset_bottom = -400.0
theme_override_font_sizes/normal_font_size = 50
text = "Level Up points: 0"

[connection signal="pressed" from="ColorRect/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="ColorRect/AttackSpeedButton" to="." method="_on_attack_speed_button_pressed"]
[connection signal="pressed" from="ColorRect/ProjectileSpeedButton" to="." method="_on_projectile_speed_button_pressed"]
[connection signal="pressed" from="ColorRect/HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="ColorRect/AttackNumberButton" to="." method="_on_attack_number_button_pressed"]
[connection signal="pressed" from="ColorRect/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="ColorRect/Cancel" to="." method="_on_cancel_pressed"]
